feat: P4ADEV-2522 delete debt-position-type API  (#96)
