# openapi/p4pa-pu-bff.openapi.yaml
@@ -337,6 +337,30 @@ paths:
           description: Not Found - Debt Position Type not found
         '500':
           description: Internal Server Error
+    delete:
+      tags:
+        - DebtPositionTypes
+      summary: "Delete a specific DebtPositionType"
+      operationId: deleteDebtPositionType
+      parameters:
+        - name: debtPositionTypeId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+          description: The unique identifier of the debt-position-type
+      responses:
+        '200':
+          description: OK
+        '401':
+          description: Unauthorized - Missing or invalid token
+        '403':
+          description: Forbidden - Access denied
+        '404':
+          description: Not Found - DebtPositionTypeOrg Not Found
+        '500':
+          description: Internal Server Error
   /organization/{organizationId}/debt-position-type-orgs-with-count:
     get:
       tags:
